Fix: ribbon title off-center

--- a/assets/styles/banner.css
+++ b/assets/styles/banner.css
@@ -52,11 +52,14 @@
 }
 
 #top-ribbon .content {
+  font-size: smaller;
+}
+
+#top-ribbon .content .copy {
   display: flex;
   flex-flow: row;
   justify-content: space-between;
   gap: 1em;
-  font-size: smaller;
 }
 
 #top-ribbon .content h1,
